--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "Montserrat-Bold";
+  font-weight: 900;
 }
 
 p {
@@ -15,9 +16,10 @@ p {
 /* Headings */
 
 .big-heading {
-  font-family: "Montserrat-Black";
+  font-family: "Montserrat";
   font-size: 3.5rem;
   line-height: 1.5;
+  font-weight: 900;
 }
 
 .section-heading {
@@ -51,7 +53,7 @@ p {
 .navbar-brand {
   font-family: "Ubuntu";
   font-size: 2.5rem;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .nav-item {
@@ -60,7 +62,8 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat-Light";
+  font-family: "Montserrat";
+  font-weight: 300;
 }
 
 /* Buttons */
